Fixed issue with toolbar scrolling up too much

--- a/src/components/MainScreen/PlayScreen/AnswerScreen/AnswerScreen.module.css
+++ b/src/components/MainScreen/PlayScreen/AnswerScreen/AnswerScreen.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     margin: auto;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
     text-align: center;
     background-color: #F0F0F0;
     touch-action: none; /* Prevent pull-to-refresh */
